<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:weightSum="2" >

    <FrameLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:focusable="true" >

        <com.google.android.exoplayer.AspectRatioFrameLayout
            android:id="@+id/video_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" >

            <SurfaceView
                android:id="@+id/surface_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <View
                android:id="@+id/shutter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <com.google.android.exoplayer.text.SubtitleLayout
                android:id="@+id/subtitles"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.exoplayer.AspectRatioFrameLayout>

        <com.google.android.exoplayer.controller.GoatMediaController
            android:id="@+id/media_controller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#88000000"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/player_state_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/debug_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:id="@+id/controls_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <Button
                    android:id="@+id/video_controls"
                    style="@style/DemoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showVideoPopup"
                    android:text="@string/video"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/audio_controls"
                    style="@style/DemoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showAudioPopup"
                    android:text="@string/audio"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/text_controls"
                    style="@style/DemoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showTextPopup"
                    android:text="@string/text"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/verbose_log_controls"
                    style="@style/DemoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showVerboseLogPopup"
                    android:text="@string/logging" />

                <Button
                    android:id="@+id/retry_button"
                    style="@style/DemoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retry"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_green_light" />

</LinearLayout>